# dat250gruppe9

./: README.md  Software Technology Project - Final Presentation - PollHub.pptx  dat250-feedapp-gui  docker-compose.yml  mongo-init.js
DesignDocument/: DesignPresentation.pptx  FeedApp_FlowDiagram.drawio  appFlow.drawio  designQuestions.md  designdocument.md  useCaseDiagram.drawio  ~$DesignPresentation.pptx
DesignDocument/AppFlow/: FeedApp_FlowDiagram.drawio  appFlowV2.drawio
DesignDocument/ArchitectDiagram/: architectural_diagram.drawio  architectural_diagram_endproduct.drawio
DesignDocument/DomainModel/: pollhub_domain_model.uml
DesignDocument/UX-example/: FeedApp-UX-example.bmpr  readme.md
DesignDocument/UseCase/: useCaseDiagram_v3.drawio
DesignDocument/logo/: AdobeStock_120922111.ait  feedapp-logo.ai
ProgressPresentation/: FeedApp Technology stack - Progress Presentation.pptx
dat250-feedapp-api/: Dockerfile  README.MD  docker-compose.yml  generateDatabase.sql  mvnw.cmd  pom.xml
dat250-feedapp-gui/: .gitignore  README.md  package-lock.json  package.json
dat250-feedapp-gui/feedapp/: Dockerfile  package-lock.json  package.json
dat250-feedapp-iot/: .dockerignore
dat250-feedapp-iot/iotdevice/: .metadata  Dockerfile  (+2 more)
dat250-feedapp-muservice/: .gitignore  Cargo.toml  Dockerfile  README.md
dat250-feedapp-muservice/src/: main.rs
dat250-feedapp-report/: .gitignore  README.md  report.bib  report.tex
dat250-jpa-designproto/: .gitignore  README.MD  mvnw  mvnw.cmd  pom.xml
dat250-restapi-proto/: README.MD
doc/: api.md  iot-dev.md  muservice.md
(+188 files in other folders)
