[package]
name = "dat250-feedapp-muservice"
version = "0.1.0"
authors = ["Kenneth Fossen <kenneth.fossen@student.uib.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = { version = "0.3", default-features = false }
reqwest = { version="0.10.8" , features = ["json"]}
tokio = { version = "0.2", features = ["macros"] }
serde = "1.0.117"
serde_json = "1.0.59"
sled = "0.34"
# background-jobs-sled-storage = "0.3.0"

[dependencies.kv]
version = "0.22"
features = ["json-value"]
