[package]
name = "dat250-feedapp-muservice"
version = "0.1.0"
authors = ["Kenneth Fossen <kenneth.fossen@student.uib.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0.117"}
serde_json = "1.0.59"
ureq = { version = "1.5.1" , features = ["json"] }
mongodb = "1.1.1"
bson = "1.1.0"

